gen/libspex.jl


function SPEX_mpq_equal(r, x, y)
    @ccall libspexutil.SPEX_mpq_equal(r::Ptr{Cint}, x::Ptr{Cvoid}, y::Ptr{Cvoid})::SPEX_info
end

function SPEX_mpfr_init2(x, size)
    @ccall libspexutil.SPEX_mpfr_init2(x::Ptr{Cvoid}, size::UInt64)::SPEX_info
end

function SPEX_mpfr_set(x, y, rnd)
    @ccall libspexutil.SPEX_mpfr_set(x::Ptr{Cvoid}, y::Ptr{Cvoid}, rnd::mpfr_rnd_t)::SPEX_info
end

function SPEX_mpfr_set_d(x, y, rnd)
    @ccall libspexutil.SPEX_mpfr_set_d(x::Ptr{Cvoid}, y::Cdouble, rnd::mpfr_rnd_t)::SPEX_info
end

function SPEX_mpfr_set_si(x, y, rnd)
    @ccall libspexutil.SPEX_mpfr_set_si(x::Ptr{Cvoid}, y::Int64, rnd::mpfr_rnd_t)::SPEX_info
end

function SPEX_mpfr_set_q(x, y, rnd)
    @ccall libspexutil.SPEX_mpfr_set_q(x::Ptr{Cvoid}, y::Ptr{Cvoid}, rnd::mpfr_rnd_t)::SPEX_info
end

function SPEX_mpfr_set_z(x, y, rnd)
    @ccall libspexutil.SPEX_mpfr_set_z(x::Ptr{Cvoid}, y::Ptr{Cvoid}, rnd::mpfr_rnd_t)::SPEX_info
end

function SPEX_mpfr_get_z(x, y, rnd)
    @ccall libspexutil.SPEX_mpfr_get_z(x::Ptr{Cvoid}, y::Ptr{Cvoid}, rnd::mpfr_rnd_t)::SPEX_info
end

function SPEX_mpfr_get_q(x, y, rnd)
    @ccall libspexutil.SPEX_mpfr_get_q(x::Ptr{Cvoid}, y::Ptr{Cvoid}, rnd::mpfr_rnd_t)::SPEX_info
end

function SPEX_mpfr_get_d(x, y, rnd)
    @ccall libspexutil.SPEX_mpfr_get_d(x::Ptr{Cdouble}, y::Ptr{Cvoid}, rnd::mpfr_rnd_t)::SPEX_info
end

function SPEX_mpfr_get_si(x, y, rnd)
    @ccall libspexutil.SPEX_mpfr_get_si(x::Ptr{Int64}, y::Ptr{Cvoid}, rnd::mpfr_rnd_t)::SPEX_info
end

function SPEX_mpfr_mul(x, y, z, rnd)
    @ccall libspexutil.SPEX_mpfr_mul(x::Ptr{Cvoid}, y::Ptr{Cvoid}, z::Ptr{Cvoid}, rnd::mpfr_rnd_t)::SPEX_info
end

function SPEX_mpfr_mul_d(x, y, z, rnd)
    @ccall libspexutil.SPEX_mpfr_mul_d(x::Ptr{Cvoid}, y::Ptr{Cvoid}, z::Cdouble, rnd::mpfr_rnd_t)::SPEX_info
end

function SPEX_mpfr_div_d(x, y, z, rnd)
    @ccall libspexutil.SPEX_mpfr_div_d(x::Ptr{Cvoid}, y::Ptr{Cvoid}, z::Cdouble, rnd::mpfr_rnd_t)::SPEX_info
end

function SPEX_mpfr_ui_pow_ui(x, y, z, rnd)
    @ccall libspexutil.SPEX_mpfr_ui_pow_ui(x::Ptr{Cvoid}, y::UInt64, z::UInt64, rnd::mpfr_rnd_t)::SPEX_info
end

function SPEX_mpfr_sgn(sgn, x)
    @ccall libspexutil.SPEX_mpfr_sgn(sgn::Ptr{Cint}, x::Ptr{Cvoid})::SPEX_info
end

function SPEX_mpfr_free_cache()
    @ccall libspexutil.SPEX_mpfr_free_cache()::SPEX_info
end

function SPEX_mpfr_free_str(str)
    @ccall libspexutil.SPEX_mpfr_free_str(str::Ptr{Cchar})::SPEX_info
end

function SPEX_Left_LU_backslash(X_handle, type, A, b, option)
    @ccall libspexleftlu.SPEX_Left_LU_backslash(X_handle::Ptr{Ptr{SPEX_matrix}}, type::SPEX_type, A::Ptr{SPEX_matrix}, b::Ptr{SPEX_matrix}, option::Ptr{SPEX_options})::SPEX_info
end

function SPEX_Left_LU_factorize(L_handle, U_handle, rhos_handle, pinv_handle, A, S, option)
    @ccall libspexleftlu.SPEX_Left_LU_factorize(L_handle::Ptr{Ptr{SPEX_matrix}}, U_handle::Ptr{Ptr{SPEX_matrix}}, rhos_handle::Ptr{Ptr{SPEX_matrix}}, pinv_handle::Ptr{Ptr{Int64}}, A::Ptr{SPEX_matrix}, S::Ptr{SPEX_LU_analysis}, option::Ptr{SPEX_options})::SPEX_info
end

function SPEX_Left_LU_solve(X_handle, b, A, L, U, rhos, S, pinv, option)
    @ccall libspexleftlu.SPEX_Left_LU_solve(X_handle::Ptr{Ptr{SPEX_matrix}}, b::Ptr{SPEX_matrix}, A::Ptr{SPEX_matrix}, L::Ptr{SPEX_matrix}, U::Ptr{SPEX_matrix}, rhos::Ptr{SPEX_matrix}, S::Ptr{SPEX_LU_analysis}, pinv::Ptr{Int64}, option::Ptr{SPEX_options})::SPEX_info
end

const SuiteSparse_long = Clong

const SuiteSparse_long_max = typemax(Clong)

const SuiteSparse_long_idd = "ld"

const SUITESPARSE_DATE = "Mar 3, 2021"

const SUITESPARSE_MAIN_VERSION = 5

const SUITESPARSE_SUB_VERSION = 9

const SUITESPARSE_SUBSUB_VERSION = 0

const SPEX_UTIL_VERSION = "1.1.1"

const SPEX_UTIL_VERSION_MAJOR = 1

const SPEX_UTIL_VERSION_MINOR = 1

const SPEX_UTIL_VERSION_SUB = 1

const SPEX_LEFT_LU_VERSION = "1.1.1"

const SPEX_LEFT_LU_VERSION_MAJOR = 1

const SPEX_LEFT_LU_VERSION_MINOR = 1

const SPEX_LEFT_LU_VERSION_SUB = 1

